k8s/prod/service.yml
# =============================================================================
# Services prod - Neon Beat
# =============================================================================

apiVersion: v1
kind: Service
metadata:
  name: neon-beat-prod-couchdb
  namespace: neon-beat
  labels:
    app.kubernetes.io/name: couchdb
    app.kubernetes.io/part-of: neon-beat
    app.kubernetes.io/instance: prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: couchdb
    app.kubernetes.io/instance: prod
  ports:
    - name: http
      port: 5984
      targetPort: 5984

---

apiVersion: v1
kind: Service
metadata:
  name: neon-beat-prod-back
  namespace: neon-beat
  labels:
    app.kubernetes.io/name: neon-beat-back
    app.kubernetes.io/part-of: neon-beat
    app.kubernetes.io/instance: prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: neon-beat-back
    app.kubernetes.io/instance: prod
  ports:
    - name: http
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: neon-beat-prod-game-front
  namespace: neon-beat
  labels:
    app.kubernetes.io/name: neon-beat-game-front
    app.kubernetes.io/part-of: neon-beat
    app.kubernetes.io/instance: prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: neon-beat-game-front
    app.kubernetes.io/instance: prod
  ports:
    - name: http
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: neon-beat-prod-admin-front
  namespace: neon-beat
  labels:
    app.kubernetes.io/name: neon-beat-admin-front
    app.kubernetes.io/part-of: neon-beat
    app.kubernetes.io/instance: prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: neon-beat-admin-front
    app.kubernetes.io/instance: prod
  ports:
    - name: http
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: neon-beat-prod-buzzer-front
  namespace: neon-beat
  labels:
    app.kubernetes.io/name: neon-beat-virtual-buzzer
    app.kubernetes.io/part-of: neon-beat
    app.kubernetes.io/instance: prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: neon-beat-virtual-buzzer
    app.kubernetes.io/instance: prod
  ports:
    - name: http
      port: 80
      targetPort: 80
